--- a/WpfCanvas/MainWindow.xaml
+++ b/WpfCanvas/MainWindow.xaml
@@ -3,6 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="CanvasZIndex" Height="800" Width="1500"
         WindowStartupLocation="Manual"
+        SizeChanged="MainWindow_OnSizeChanged"
         Left="800" Top="400">
 
     <Canvas  Name="MyCanvas" MouseDown="MyCanvas_OnMouseDown" >
